--- a/ui_app/qt_ui_files/ui_layout.ui
+++ b/ui_app/qt_ui_files/ui_layout.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>800</width>
+    <width>886</width>
     <height>628</height>
    </rect>
   </property>
@@ -19,12 +19,12 @@
      <rect>
       <x>470</x>
       <y>10</y>
-      <width>301</width>
+      <width>351</width>
       <height>531</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>2</number>
+     <number>4</number>
     </property>
     <widget class="QWidget" name="Arm">
      <attribute name="title">
@@ -41,9 +41,14 @@
       <string>Science</string>
      </attribute>
     </widget>
-    <widget class="QWidget" name="Autonomy">
+    <widget class="QWidget" name="Power">
      <attribute name="title">
-      <string>Autonomy</string>
+      <string>Power</string>
+     </attribute>
+    </widget>
+    <widget class="QWidget" name="GPS">
+     <attribute name="title">
+      <string>GPS</string>
      </attribute>
     </widget>
    </widget>
@@ -153,12 +158,7 @@
     </property>
     <item>
      <property name="text">
-      <string>Arm-Joint Control</string>
-     </property>
-    </item>
-    <item>
-     <property name="text">
-      <string>Arm-Cartesian Control</string>
+      <string>Arm</string>
      </property>
     </item>
     <item>
@@ -173,7 +173,7 @@
     </item>
     <item>
      <property name="text">
-      <string>Autonomy</string>
+      <string>Power</string>
      </property>
     </item>
    </widget>
@@ -183,8 +183,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>800</width>
-     <height>25</height>
+     <width>886</width>
+     <height>22</height>
     </rect>
    </property>
   </widget>
