--- a/ui_app/qt_ui_files/drive_layout.ui
+++ b/ui_app/qt_ui_files/drive_layout.ui
@@ -478,6 +478,101 @@
     <string>Error Message</string>
    </property>
   </widget>
+  <widget class="QLabel" name="AntennaBox">
+   <property name="geometry">
+    <rect>
+     <x>249</x>
+     <y>16</y>
+     <width>101</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Antenna Data</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="heading_val">
+   <property name="geometry">
+    <rect>
+     <x>326</x>
+     <y>99</y>
+     <width>41</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="send_antenna">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>130</y>
+     <width>80</width>
+     <height>25</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Send!</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="LatitudeLabel">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>37</y>
+     <width>58</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Latitude</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="longitude_val">
+   <property name="geometry">
+    <rect>
+     <x>326</x>
+     <y>68</y>
+     <width>41</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="HeadingLabel">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>99</y>
+     <width>57</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Heading</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="latitude_val">
+   <property name="geometry">
+    <rect>
+     <x>326</x>
+     <y>37</y>
+     <width>41</width>
+     <height>25</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="LongitudeLabel">
+   <property name="geometry">
+    <rect>
+     <x>250</x>
+     <y>68</y>
+     <width>70</width>
+     <height>17</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Longitude</string>
+   </property>
+  </widget>
  </widget>
  <resources/>
  <connections/>
