--- a/ui_app/qt_ui_files/drive_layout.ui
+++ b/ui_app/qt_ui_files/drive_layout.ui
@@ -450,16 +450,6 @@
     <string>yaw</string>
    </property>
   </widget>
-  <widget class="QTextBrowser" name="error_label">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>510</y>
-     <width>271</width>
-     <height>91</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QLabel" name="error_message_label">
    <property name="geometry">
     <rect>
@@ -476,6 +466,19 @@
    </property>
    <property name="text">
     <string>Error Message</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="error_label">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>520</y>
+     <width>481</width>
+     <height>51</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Currenly no error</string>
    </property>
   </widget>
  </widget>
