--- a/ui_app/qt_ui_files/gps_layout.ui
+++ b/ui_app/qt_ui_files/gps_layout.ui
@@ -6,54 +6,49 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>576</width>
+    <width>506</width>
     <height>648</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>GPS</string>
   </property>
-  <widget class="QLabel" name="GPS_Plot">
+  <widget class="QWidget" name="verticalLayoutWidget">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>10</y>
-     <width>121</width>
-     <height>41</height>
+     <x>10</x>
+     <y>20</y>
+     <width>481</width>
+     <height>435</height>
     </rect>
    </property>
-   <property name="font">
-    <font>
-     <pointsize>17</pointsize>
-    </font>
-   </property>
-   <property name="text">
-    <string>GPS_Plot</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="plot">
-   <property name="geometry">
-    <rect>
-     <x>20</x>
-     <y>60</y>
-     <width>491</width>
-     <height>311</height>
-    </rect>
-   </property>
-   <property name="font">
-    <font>
-     <pointsize>14</pointsize>
-    </font>
-   </property>
-   <property name="frameShape">
-    <enum>QFrame::Box</enum>
-   </property>
-   <property name="lineWidth">
-    <number>2</number>
-   </property>
-   <property name="text">
-    <string>plot</string>
-   </property>
+   <layout class="QVBoxLayout" name="verticalLayout">
+    <item>
+     <widget class="QLabel" name="GPS_Plot">
+      <property name="font">
+       <font>
+        <pointsize>17</pointsize>
+       </font>
+      </property>
+      <property name="text">
+       <string>GPS_Plot</string>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QWidget" name="gps_plotter" native="true">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>400</height>
+       </size>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(0, 0, 0);</string>
+      </property>
+     </widget>
+    </item>
+   </layout>
   </widget>
  </widget>
  <resources/>
