--- a/angular_ui_app/src/app/app.component.html
+++ b/angular_ui_app/src/app/app.component.html
@@ -2,6 +2,12 @@
   body {
     padding: 50px;
   }
+  nav {
+    color: blue;
+  }
 </style>
-
+<nav routerLink="/">Home</nav>
+<nav routerLink="/turtlesim">TurtleSim</nav>
+<router-outlet></router-outlet>
+<!-- <app-turtlesim/> -->
 <app-main-frame/>
