moving the view into main-frame

--- a/angular_ui_app/src/app/main-frame/main-frame.component.html
+++ b/angular_ui_app/src/app/main-frame/main-frame.component.html
@@ -3,4 +3,8 @@
         {{ rosBridgeStatus }}
     </div>
     <app-cameras-widget/>
+    
+    <nav routerLink="/">Home</nav>
+    <nav routerLink="/turtlesim">TurtleSim</nav>
+    <router-outlet></router-outlet>
 </div>
