--- a/angular_ui_app/src/app/sandbox/turtlesim/turtlesim.component.html
+++ b/angular_ui_app/src/app/sandbox/turtlesim/turtlesim.component.html
@@ -22,5 +22,6 @@
 
       <button (keypress)="turtleMotion($event)" class="btn btn-success" style="width: 100%;">Use awd control</button>
     </div>
-
-<h4>Listener: {{myDisplay}}</h4>
+    <!-- <app-button1></app-button1> -->
+    
+    <h4>Listener: {{myDisplay}}</h4>
