ajax dependency and test-page component

--- a/angular_ui_app/src/app/main-frame/main-frame.component.html
+++ b/angular_ui_app/src/app/main-frame/main-frame.component.html
@@ -49,6 +49,7 @@
                 <nav routerLink="/arm">Arm</nav>
                 <nav routerLink="/science">Science</nav>
                 <nav routerLink="/gps">Gps</nav>
+                <nav routerLink="/test">Test</nav>
             </div>
 
             <router-outlet style="flex: 1 1 100px; display: flex;"></router-outlet>
