--- a/angular_ui_app/src/app/sandbox/buttons/button1/button1.component.html
+++ b/angular_ui_app/src/app/sandbox/buttons/button1/button1.component.html
@@ -1,1 +1,2 @@
-<button>Click Button1</button>
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript"></script>
+<button (click)="increment()">Click Button1</button>
