button calling service and sub to node from diff workspace

--- a/angular_ui_app/src/app/sandbox/test-page/test-page.component.html
+++ b/angular_ui_app/src/app/sandbox/test-page/test-page.component.html
@@ -1,8 +1,7 @@
 <p>test-page works!</p>
 <p>Drive Data Sub: {{driveData}}</p>
 
-<!-- <app-button1></app-button1> -->
-<!-- <app-button1></app-button1> -->
+<app-button1></app-button1>
 
 <app-camera-test></app-camera-test>
 
