fix the angular version and tested sub, pub

--- a/angular_ui_app/src/app/main-frame/main-frame.component.html
+++ b/angular_ui_app/src/app/main-frame/main-frame.component.html
@@ -44,6 +44,7 @@
             <div class="navbar" style="flex-wrap: wrap; align-content: space-around; padding: 0 10%;">
                 <nav routerLink="/">Home</nav>
                 <nav routerLink="/turtlesim">TurtleSim</nav>
+                <nav routerLink="/antenna">Antenna</nav>
                 <nav routerLink="/power">Power</nav>
                 <nav routerLink="/drive">Drive</nav>
                 <nav routerLink="/arm">Arm</nav>
