--- a/angular_ui_app/src/app/components/antenna/antenna.component.html
+++ b/angular_ui_app/src/app/components/antenna/antenna.component.html
@@ -1,13 +1,13 @@
-<p>antenna works!</p>
+<p>Antenna Component</p>
 <label for="">Longitude</label>
 <input type="number" [(ngModel)]="longitude" default="longitude">
 <label for="">Latitude</label>
 <input type="number" [(ngModel)]="latitude" default="latitude">
 <button (click)="sendInstruction()">Send info</button>
-<Textarea>Instruction Preview: {{antennaInstruction}}</Textarea>
+<!-- Preview content before sent -->
+<!-- <Textarea>Instruction Preview: {{antennaInstruction}}</Textarea> -->
+
+<!-- Sent payload to topic -->
 <Textarea>Antenna Instruction sent: {{payload}}</Textarea>
 
 
-
-<!-- <div>{{payload}}</div>
-<div>Payload2: {{payload2}}</div> -->
