Added partial skeleton of drive page + cleanup

--- a/angular_ui_app/src/app/app.component.html
+++ b/angular_ui_app/src/app/app.component.html
@@ -1,6 +1,3 @@
-<style>
-  body {
-    padding: 50px;
-  }
-</style>
-<app-main-frame/>
+<div style="color: #fff; font-family: 'Courier New', Courier, monospace;">
+    <app-drive-page/>
+</div>
