--- a/angular_ui_app/src/app/components/gps/gps-page/gps-page.component.html
+++ b/angular_ui_app/src/app/components/gps/gps-page/gps-page.component.html
@@ -1,1 +1,3 @@
-<p>gps-page works!</p>
+<app-generic height="375px" width="375px">
+    <p style="font-size: x-large; margin: auto;">GPS</p>
+</app-generic>
