--- a/angular_ui_app/src/styles.scss
+++ b/angular_ui_app/src/styles.scss
@@ -1,5 +1,7 @@
 @import "~bootstrap/dist/css/bootstrap.css";
 
 body {
-    padding: 0.5vh;
+    padding: 0px;
+    margin: 0px;
+    background-color: #292E36;
 }
