added the functional rover postion fb, accuracy of computation to be tested

--- a/angular_ui_app/src/app/components/drive/drive.component.html
+++ b/angular_ui_app/src/app/components/drive/drive.component.html
@@ -1,4 +1,6 @@
 <app-generic height="235px" width="640px">
     <h5>Drive</h5>
-    <p>{{msgstr}}</p>
+    <p>Raw input: {{msgstr}}</p>
+    <p>Computed value: {{cmpstr}}</p>
+
 </app-generic>
