added the page routing and navbar

--- a/angular_ui_app/src/app/app.component.html
+++ b/angular_ui_app/src/app/app.component.html
@@ -1,3 +1,6 @@
 <div style="color: #fff; font-family: 'Courier New', Courier, monospace;">
-    <app-drive-page/>
+    <!-- navbar in header -->
+    <app-header/> 
+    <!--is included in the router outlet <app-drive-page/> -->
+    <router-outlet></router-outlet>
 </div>
