--- a/angular_ui_app/src/app/components/header/header.component.html
+++ b/angular_ui_app/src/app/components/header/header.component.html
@@ -2,4 +2,8 @@
     <div #rosBridgeMainDiv>
         {{ rosBridgeStatus }}
     </div>
+    <div class="navbar" style="flex-wrap: wrap; align-content: space-around; padding: 0 10%;">
+        <nav routerLink="/">Home</nav>
+        <nav routerLink="/drive">Drive</nav>
+    </div>
 </div>
