test page added for integration

--- a/angular_ui_app/src/app/components/navbar/navbar.component.html
+++ b/angular_ui_app/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,5 @@
 <div class="navbar" style="flex-wrap: wrap; align-content: space-around; padding: 0 10%;">
     <nav routerLink="/">Home</nav>
     <nav routerLink="/drive">Drive</nav>
+    <nav routerLink="/test">Test</nav>
 </div>
