drive & arm component changes

--- a/angular_ui_app/src/app/main-frame/main-frame.component.html
+++ b/angular_ui_app/src/app/main-frame/main-frame.component.html
@@ -50,11 +50,12 @@
                 <nav routerLink="/science">Science</nav>
                 <nav routerLink="/gps">Gps</nav>
                 <nav routerLink="/test">Test</nav>
+                <nav routerLink="/drive-control">Drive control</nav>
             </div>
 
             <router-outlet style="flex: 1 1 100px; display: flex;"></router-outlet>
         </div>
-
+        <app-drive-control-page/>
         <!-- <div class="navbar" style="flex-wrap: wrap; align-content: space-between;" >
             <nav routerLink="/">Home</nav>
             <nav routerLink="/turtlesim">TurtleSim</nav>
