First implementation of the gps map

--- a/angular_ui_app/src/app/main-frame/main-frame.component.html
+++ b/angular_ui_app/src/app/main-frame/main-frame.component.html
@@ -3,4 +3,18 @@
         {{ rosBridgeStatus }}
     </div>
     <app-cameras-widget/>
+    <div class="grid-container">
+        <div class="gps">
+            GPS
+        </div>
+        <div class="camera1">
+            Camera
+        </div>
+        <div class="camera2">
+            Camera2
+        </div>
+        <div class="process-log">
+            Process Log
+        </div>
+      </div>
 </div>
