--- a/angular_ui_app/src/app/components/o-drive/o-drive.component.html
+++ b/angular_ui_app/src/app/components/o-drive/o-drive.component.html
@@ -1,3 +1,6 @@
 <p>o-drive works!</p>
-<h5>Right: {{wheels.right}}</h5>
-<h5>Left: {{wheels.left}}</h5>
+<div *ngIf="wheels">
+    <h5>Right: {{wheels.right}}</h5>
+    <h5>Left: {{wheels.left}}</h5>
+</div>
+<h5>Gamepad: {{g}}</h5>
