Linked Angular Gamepad to cmd vel

--- a/angular_ui_app/src/app/components/drive/drive.component.html
+++ b/angular_ui_app/src/app/components/drive/drive.component.html
@@ -1,3 +1,5 @@
 <app-generic height="235px" width="640px">
     <h5>Drive</h5>
+    <button (click)="enableGamepad()">Gamepad On</button>
+    <button (click)="disableGamepad()">Gamepad Off</button>
 </app-generic>
