--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -4,5 +4,5 @@
         <app-camera camera_size="small"/>
         <app-gps-page/>
     </div>
-    <app-drive-component/>
+    <app-o-drive/>
 </div>
