temporary drive page

--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -4,5 +4,9 @@
         <app-camera camera_size="small"/>
         <app-gps-page/>
     </div>
-    <app-o-drive/>
+    <div style="display: flex; justify-content: space-between; margin-bottom: 5px;">
+        <app-o-drive/>
+        <app-arm-component></app-arm-component>
+        <app-antenna></app-antenna>
+    </div>
 </div>
