--- a/angular_ui_app/src/app/components/antenna/antenna.component.html
+++ b/angular_ui_app/src/app/components/antenna/antenna.component.html
@@ -1,13 +1,13 @@
-<p>Antenna Component</p>
-<label for="">Longitude</label>
-<input type="number" [(ngModel)]="longitude" default="longitude">
-<label for="">Latitude</label>
-<input type="number" [(ngModel)]="latitude" default="latitude">
-<button (click)="sendInstruction()">Send info</button>
-<!-- Preview content before sent -->
-<!-- <Textarea>Instruction Preview: {{antennaInstruction}}</Textarea> -->
-
-<!-- Sent payload to topic -->
-<Textarea>Antenna Instruction sent: {{payload}}</Textarea>
-
-
+<app-generic height="375px" width="375px">
+    <p>Antenna Component</p>
+    <label for="">Longitude: </label>
+    <input type="number" [(ngModel)]="longitude" default="longitude" style="position: relative; right: -10px;">
+    <b></b>
+    <label for="">Latitude: </label>
+    <input type="number" [(ngModel)]="latitude" default="latitude" style="position: relative; right: -20px;">
+    <div>
+        <button (click)="sendInstruction()">Send info</button>
+    </div>
+    <!-- Sent payload to topic -->
+    <Textarea cols="35" rows="5">Antenna Instruction sent: {{payload}}</Textarea>
+</app-generic>
