adding rtc component to page

--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -4,6 +4,7 @@
         <app-camera camera_size="large"/>
         <app-camera camera_size="small"/>
         <app-gps-page/>
+        <app-webrtc></app-webrtc>
     </div>
     <app-drive-component/>
 </div>
