Fixed colors for components

--- a/angular_ui_app/src/app/components/arm/arm.component.html
+++ b/angular_ui_app/src/app/components/arm/arm.component.html
@@ -4,7 +4,7 @@
 
     <div class="arm">
         <!-- to solve button problem, chnaged app.comp.ts and app.module.ts -->
-        <div id="armInfo" style="height: 235px; width: 645px; background-color: gray;">
+        <div id="armInfo" style="height: 235px; width: 645px;">
             <h4>Arm Info</h4>
             <div>
                 <p id="Wrist">Wrist: {{ array[0] }}</p>
