--- a/angular_ui_app/src/app/components/drive/drive.component.html
+++ b/angular_ui_app/src/app/components/drive/drive.component.html
@@ -8,8 +8,7 @@
     </head>
 
     <div class="drive">
-        <div id="driveInfo" style="height: 235px; width: 645px; background-color: lightgray;">
-            <h4>Drive Info</h4>
+        <div id="driveInfo" style="height: 235px; width: 645px;">
             <p id="LF">Wheel LF:</p>
             <p id="LR">Wheel LR:</p>
             <p id="RF">Wheel RF:</p>
