to be fixed null video object

--- a/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
+++ b/angular_ui_app/src/app/pages/drive-page/drive-page.component.html
@@ -4,6 +4,9 @@
         <app-camera camera_size="large"/>
         <app-camera camera_size="small"/>
         <app-gps-page/>
+    </div>
+    <div style="display: flex; margin-bottom: 5px;">
+        <app-webrtc></app-webrtc>
         <app-webrtc></app-webrtc>
     </div>
     <app-drive-component/>
