--- a/angular_ui_app/src/app/gps/gps.component.html
+++ b/angular_ui_app/src/app/gps/gps.component.html
@@ -1,5 +1,9 @@
-
 <div class="grid-container">
-    <div class="gps">
-        <app-map></app-map>
+  <div class="gps">
+    <div class="map-container">
+      <div class="map-frame">
+        <div id="map"></div>
+      </div>
     </div>
+  </div>
+</div>
