--- a/angular_ui_app/src/app/gps/gps.component.scss
+++ b/angular_ui_app/src/app/gps/gps.component.scss
@@ -1,14 +1,29 @@
+.map-container {
+
+  height: 343px;
+  width: 343px;
+}
+
+.map-frame {
+
+  height: 100%;
+}
+
+#map {
+  height: 100%;
+}
+
 .grid-container {
-    display: grid;
-    grid-gap: 5px;
-    grid-template-columns: 350px 800px;
-  }
-  
-.gps{
-    height: 350px;
-    width: 350px;
-    border: 3px solid black;
-    background-color: #ccc;
-    grid-column: 1;
-    grid-row: 1;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: 350px 800px;
+}
+
+.gps {
+  height: 350px;
+  width: 350px;
+  border: 3px solid black;
+  background-color: #ccc;
+  grid-column: 1;
+  grid-row: 1;
 }
