navbar, camera proper disconnection, line-graph

--- a/angular_ui_app/src/app/app.component.html
+++ b/angular_ui_app/src/app/app.component.html
@@ -1,3 +1,4 @@
 <div style="color: #fff; font-family: 'Courier New', Courier, monospace;">
-    <app-drive-page/>
+  <app-header/>
+  <router-outlet/>
 </div>
