--- a/angular_ui_app/src/app/components/header/header.component.html
+++ b/angular_ui_app/src/app/components/header/header.component.html
@@ -1,5 +1,7 @@
-<div id="outer-header-div" style="width: 100%; height: 50px; background-color: #2A3F47;">
+<div id="outer-header-div" style="width: 100%; height: 50px; background-color: #2A3F47; display: flex; justify-content: space-between;">
     <div #rosBridgeMainDiv>
         {{ rosBridgeStatus }}
     </div>
+    <app-navbar></app-navbar>
 </div>
+
