Created the power UI component, need to test bms

--- a/angular_ui_app/src/app/components/power/power-page/power-page.component.html
+++ b/angular_ui_app/src/app/components/power/power-page/power-page.component.html
@@ -1,3 +1,7 @@
-<p>power-page works!</p>
-<div>{{Results}}</div>
-<input type="text" [(ngModel)]=Results>
+<p>Power Component</p>
+<!-- Preview content before sent -->
+<p>Cell Voltage: {{cellVoltage}}</p>
+<p>Total Voltage: {{totalVoltage}}</p>
+<p>Charging Mosfet: {{chargingMosfet}}</p>
+<p>Discharging Mosfet: {{dischargingMosfet}}</p>
+<p>Error Logs: {{cellVoltage}}</p>
