axis title, general graph component, download feature

--- a/angular_ui_app/src/app/components/navbar/navbar.component.html
+++ b/angular_ui_app/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<div style="display: flex; justify-content: space-around; width: 300px;">
+<div style="display: flex; justify-content: space-around; width: 300px; border: solid rebeccapurple;">
     <nav routerLink="/drive-page">Drive</nav>
     <nav routerLink="/science-page">Science</nav>
 </div>
