--- a/angular_ui_app/src/app/pages/science-page/science-page.component.html
+++ b/angular_ui_app/src/app/pages/science-page/science-page.component.html
@@ -1,4 +1,21 @@
 <app-generic>
     <p>science-page works!</p>
-    <app-line-graph topicName="/test_topic"/>
+    <app-line-graph topicName="/test_topic" title="aTitle" 
+    y_axis="yyyy"
+    x_axis="xxx"/>
+
+    <app-graph topicName="/test_topic" title="aTitle" 
+    y_axis="yyyy"
+    x_axis="xxx"
+    type="line"
+    />
+    
+    <app-graph topicName="/test_topic" title="aTitle" 
+    y_axis="yyyy"
+    x_axis="xxx"
+    type="histogram"
+    />
+
+    <app-download/> 
+
 </app-generic>
