data persistence proof of concept works

--- a/angular_ui_app/src/app/pages/science-page/science-page.component.html
+++ b/angular_ui_app/src/app/pages/science-page/science-page.component.html
@@ -16,6 +16,16 @@
     type="histogram"
     />
 
+    <button (click)="collect()">
+        Get data from service!!!
+    </button>
+    <button (click)="add()">
+        Plus
+    </button>
+    <h1>
+
+        Hererf is the data: {{data}}
+    </h1>
     <app-download/> 
 
 </app-generic>
