--- a/angular_ui_app/src/app/components/graph/graph.component.html
+++ b/angular_ui_app/src/app/components/graph/graph.component.html
@@ -1,8 +1,8 @@
-<div style="display: flex; justify-content: flex-start; text-align: center;" >
+<div style="display: flex; justify-content:space-between; text-align: center;" >
     <h3 style="writing-mode: sideways-lr;">{{y_axis}}</h3>
     <div style="display: flex; flex-direction: column;" >
-        <h2 >{{title}}</h2>
-        <canvas #chart style="border: 1px solid #ccc;" width="400" height="200"></canvas>
+        <h2 >{{title}}:{{cuvetteId}}</h2>
+        <canvas #chart style="border: 1px solid #ccc;" width="300" height="200"></canvas>
         <h3>{{x_axis}}</h3>
     </div>
 </div>
