--- a/angular_ui_app/src/app/pages/science-page/science-page.component.html
+++ b/angular_ui_app/src/app/pages/science-page/science-page.component.html
@@ -1,31 +1,79 @@
 <app-generic>
     <p>science-page works!</p>
-    <app-line-graph topicName="/test_topic" title="aTitle" 
+    <!-- <app-line-graph topicName="/test_topic" title="aTitle" 
     y_axis="yyyy"
-    x_axis="xxx"/>
+    x_axis="xxx"/> -->
+    <h1>Data</h1>
+    <div style="display:flex; justify-content: flex-start;">
+        <div>
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="1" />
 
-    <app-graph topicName="/test_topic" title="aTitle" 
-    y_axis="yyyy"
-    x_axis="xxx"
-    type="line"
-    />
-    
-    <app-graph topicName="/test_topic" title="aTitle" 
-    y_axis="yyyy"
-    x_axis="xxx"
-    type="histogram"
-    />
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
+                cuvetteId="1" />
+        </div>
+        <div>
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="2" />
 
-    <button (click)="collect()">
-        Get data from service!!!
-    </button>
-    <button (click)="add()">
-        Plus
-    </button>
-    <h1>
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
+                cuvetteId="2" />
+        </div>
+        <div>
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="3" />
 
-        Hererf is the data: {{data}}
-    </h1>
-    <app-download/> 
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
+                cuvetteId="3" />
+        </div>
+        <div>
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="The y axis" x_axis="The x axis" type="line"
+                cuvetteId="4" />
 
+            <app-graph topicName="/test_topic" title="aTitle" y_axis="yyyy" x_axis="xxx" type="histogram"
+                cuvetteId="4" />
+        </div>
+    </div>
+
+    <div style="display: flex; justify-content: space-around;">
+
+        <div style="text-align: center;">
+
+            <h1>Control</h1>
+            <div style="display: flex; justify-content: flex-start;">
+                <div>
+                    <h2>Carrousel</h2>
+                    Current rotation:{{data}} <button>Turn</button>
+                </div>
+                <div style="text-align: center;">
+                    <h2>Auger</h2>
+                    <div style="display: flex; align-items: center; flex-direction: column;">
+                        <div>
+                            <button>Up</button>
+                        </div>
+                        <div>
+                            <button>Left</button>
+                            <button>Start/Stop</button>
+                            <button>Right</button>
+                        </div>
+                        <div>
+                            <button>Down</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div>
+            <h1>Stored data: {{data}}</h1>
+            <button (click)="collect()">
+                Get data from service!
+            </button>
+            <button (click)="add()">
+                Add to data store
+            </button>
+            <app-download />
+        </div>
+
+    </div>
 </app-generic>
