Rough implementation on separating graph from sub/pub

--- a/angular_ui_app/src/app/components/graph/graph.component.html
+++ b/angular_ui_app/src/app/components/graph/graph.component.html
@@ -5,4 +5,8 @@
         <canvas #chart style="border: 1px solid #ccc;" width="300" height="200"></canvas>
         <h3>{{x_axis}}</h3>
     </div>
+    <p>{{inject}}</p>
 </div>
+
+
+<!-- graph do not need to subscribe, the parent can pass the value -->
